--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,20 @@ font-size: 20px;
 
 }}
 
-
+.center {{
+    text-align: center;
+}}
+table {{
+    margin: auto; /* Tabloyu ortalamak için */
+    border-collapse: collapse;
+    width: 50%;
+    margin-bottom: 20px;
+}}
+th, td {{
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: center;
+}}
 
 header[data-testid = "stHeader"]{{background: rgba(255,255,255,0);}}
 button[data-testid = "baseButton-secondary"]{{width: 100%;}}
