--- a/style/style.css
+++ b/style/style.css
@@ -45,3 +45,7 @@ div[data-baseweb="tooltip"] >  div {{background: rgba(255,255,255,0.7); color: b
 button[kind=secondary]{{background: rgba(0,0,255,0.7); color: white;}}
 div[data-testid = "stButton"] div > div > div > button {{background: rgba(0,255,0,0.3); color: white;}}
 div[data-testid="stNumberInputContainer"] > div:nth-of-type(2) {{display: none;}}
+
+[class^="st-emotion-cache-"] .stTooltipHoverTarget > svg {{
+    stroke: black;
+}}
